    * sql.php: bug #1395590 Safari Bookmark query fieldset float problem,
      thanks to Ryan Schmidt
    * libraries/common.lib.php: bug #1397749, Safari: space before
      PMA_linkOrButton link is part of the link, thanks to Ryan Schmidt
    * server_privileges.php: bug #1398018, Safari fieldset float issue in
      privileges screens, thanks to Ryan Schmidt

2006-01-06 Marc Delisle  <lem9@users.sourceforge.net>
    * db_datadict.php, pdf_schema.php: bug #1389165, data dict shows all 
      columns as Null Yes
    * pdf_schema.php: display PDF schema did not work (missing dot)

2006-01-04 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: since we use DROP USER, some options to
      remove a user did not work under MySQL 4.1.x (only mode 2 worked),
      so I remove them from the dialog. Thanks to Ken Stanley for
      the bug report.
    * server_status.php: patch #1395031, not proper URL encoding,
      adapted from proposed solution by Matt LaPlante, thanks

2006-01-02 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/display_create_table.lib.php: bug #1389868, 
      Safari's rendering of "Create table" fieldset, thanks to Ryan Schmidt

2006-01-01 Michal Čihař  <michal@cihar.com>
    * libraries/Config.class.php: Do not check permissions on Windows, it
      seems to be broken anyway.

2006-01-01 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/transformations.lib.php: remove some PHP3 compatibility code

2005-12-31 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: bug #1388167, deleting a row in a table 
      without a primary key, handle correctly is_js_confirmed

2005-12-30 Marc Delisle  <lem9@users.sourceforge.net>
    * server_databases.php: bug #1388135, IE and dropping databases
    * librairies/mult_submits.inc.php: strong warning for DROP DATABASE
    * tbl_printview.php: bug #1389165, Print view shows all columns as Null Yes 
      (MySQL 5.x)